# azfunctions-py-skelton

./: .gitignore  README.md  pyproject.toml  requirements.txt
FastAPIApp/: __init__.py
azfunc/: __init__.py
eventfunc/: __init__.py
fastapiFunc/: __init__.py
tests/: test_azfunc.py  test_eventfunc.py
